2001-05-09  Darin Adler  <darin@eazel.com>

	* README: Updated required versions of packages.

2001-05-08  Darin Adler  <darin@eazel.com>

	Started with patch by Yoann Vandoorselaere
	<yoann@mandrakesoft.com> to not re-open /proc/mounts each time,
	but to simply rewind it instead. The patch had a lot of problems
	on Solaris and when HAVE_CDDA is true, but I reworked it so it
	should be OK.

	* libnautilus-private/nautilus-volume-monitor.c: (get_mount_list),
	(get_current_mount_list): Use rewind.

2001-05-08  Darin Adler  <darin@eazel.com>

	Integrated a fixed version of Gene's patch to compile under
	FreeBSD.

	* libnautilus-private/nautilus-volume-monitor.c:
	(has_removable_mntent_options), (get_removable_volumes),
	(volume_is_removable), (volume_is_read_only),
	(nautilus_volume_monitor_mount_unmount_removable),
	(nautilus_volume_monitor_get_mount_name_for_display): Added more
	ifdefs all over the place. This could be done more elegantly some
	day.

2001-05-08  Darin Adler  <darin@eazel.com>

	Integrated patch by Yoann Vandoorselaere <yoann@mandrakesoft.com>
	to fix a problem where we would try to get metadata for all files
	in the home directory if it was set to be used as the desktop
	directory.

	* libnautilus-private/nautilus-file-utilities.h:
	* libnautilus-private/nautilus-file-utilities.c:
	(nautilus_get_desktop_directory): Changed this to not bother with
	the call to create the directory when the home directory is used
	as the desktop.
	(nautilus_get_gmc_desktop_directory): New function.
	
	* libnautilus-private/nautilus-icon-factory.c:
	(nautilus_icon_factory_get_icon_for_file): Use
	nautilus_get_gmc_desktop_directory for the check when deciding to
	look for old-fashioned gmc metadata.

2001-05-08  Ramiro Estrugo  <ramiro@eazel.com>

	* components/mozilla/Makefile.am:
	* configure.in:
	* README:
	Remove some Mozilla Milestone cruft.  Make the Mozilla component
	build with the newly released Mozilla 0.9.  Update the README with